Mobile design fix.

--- a/src/styles.css
+++ b/src/styles.css
@@ -82,6 +82,9 @@ ul {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+  .headerContainer {
+    height: 132px;
+  }
   .headerSection {
     justify-content: center;
   }
@@ -99,6 +102,9 @@ ul {
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+  .headerContainer {
+    height: 132px;
+  }
   .headerSection {
     justify-content: center;
   }
@@ -116,6 +122,9 @@ ul {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  .headerContainer {
+    height: 64px;
+  }
   .headerSection {
     justify-content: space-between;
   }
@@ -132,6 +141,9 @@ ul {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  .headerContainer {
+    height: 64px;
+  }
   .headerSection {
     justify-content: space-between;
   }
@@ -148,6 +160,9 @@ ul {
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+  .headerContainer {
+    height: 64px;
+  }
   .headerSection {
     justify-content: space-between;
   }
